@@ -1,0 +1,19 @@
+a
+b
+c
+d
+e
+f
+---
+@temp[0] = a : a
+@temp[1] = b : b
+@temp[2] = c : c
+@temp[2] = d : d
+@temp[3] = e : e
+@temp[3] = f : f
+---
+a
+b
+d
+f
+Warning: &remove: no active foreach loop to remove element from at line 22
